--- a/game.libretro.beetle-psx/resources/language/resource.language.en_gb/strings.po
+++ b/game.libretro.beetle-psx/resources/language/resource.language.en_gb/strings.po
@@ -157,61 +157,57 @@ msgid "Dynarec Code Invalidation"
 msgstr ""
 
 msgctxt "#30033"
-msgid "Dynarec DMA/GPU/MDEC/Timer Event Cycles"
+msgid "Dynarec DMA/GPU Event Cycles"
 msgstr ""
 
 msgctxt "#30034"
-msgid "Dynarec SPU Samples"
-msgstr ""
-
-msgctxt "#30035"
 msgid "Core-Reported FPS Timing"
 msgstr ""
 
-msgctxt "#30036"
+msgctxt "#30035"
 msgid "PAL (European) Video Timing Override"
 msgstr ""
 
-msgctxt "#30037"
+msgctxt "#30036"
 msgid "Crop Overscan"
 msgstr ""
 
-msgctxt "#30038"
+msgctxt "#30037"
 msgid "Additional Cropping"
 msgstr ""
 
-msgctxt "#30039"
+msgctxt "#30038"
 msgid "Offset Cropped Image"
 msgstr ""
 
-msgctxt "#30040"
+msgctxt "#30039"
 msgid "GPU Rasterizer Overclock"
 msgstr ""
 
-msgctxt "#30041"
+msgctxt "#30040"
 msgid "Core Aspect Ratio"
 msgstr ""
 
-msgctxt "#30042"
+msgctxt "#30041"
 msgid "Initial Scan Line - NTSC"
 msgstr ""
 
-msgctxt "#30043"
+msgctxt "#30042"
 msgid "Last Scan Line - NTSC"
 msgstr ""
 
-msgctxt "#30044"
+msgctxt "#30043"
 msgid "Initial Scan Line - PAL"
 msgstr ""
 
-msgctxt "#30045"
+msgctxt "#30044"
 msgid "Last Scan Line - PAL"
 msgstr ""
 
-msgctxt "#30046"
+msgctxt "#30045"
 msgid "CD Access Method (Restart Required)"
 msgstr ""
 
-msgctxt "#30047"
+msgctxt "#30046"
 msgid "CD Loading Speed"
 msgstr ""
