--- a/game.libretro.beetle-psx/resources/language/resource.language.en_gb/strings.po
+++ b/game.libretro.beetle-psx/resources/language/resource.language.en_gb/strings.po
@@ -17,7 +17,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "Addon Summary"
-msgid "Sony - PlayStation (Beetle PSX) 0.9.44.1"
+msgid "Sony - PlayStation (Beetle PSX)"
 msgstr ""
 
 msgctxt "Addon Description"
@@ -53,165 +53,169 @@ msgid "Enable DualShock Analog Mode Toggle"
 msgstr ""
 
 msgctxt "#30007"
-msgid "Port 1: Multitap Enable"
+msgid "DualShock Analog Mode Combo"
 msgstr ""
 
 msgctxt "#30008"
-msgid "Port 2: Multitap Enable"
+msgid "Port 1: Multitap Enable"
 msgstr ""
 
 msgctxt "#30009"
-msgid "Gun Input Mode"
+msgid "Port 2: Multitap Enable"
 msgstr ""
 
 msgctxt "#30010"
-msgid "Gun Cursor"
+msgid "Gun Input Mode"
 msgstr ""
 
 msgctxt "#30011"
-msgid "Port 1: Gun Crosshair Color"
+msgid "Gun Cursor"
 msgstr ""
 
 msgctxt "#30012"
-msgid "Port 2: Gun Crosshair Color"
+msgid "Port 1: Gun Crosshair Color"
 msgstr ""
 
 msgctxt "#30013"
-msgid "Mouse Sensitivity"
+msgid "Port 2: Gun Crosshair Color"
 msgstr ""
 
 msgctxt "#30014"
-msgid "neGcon Twist Response"
+msgid "Mouse Sensitivity"
 msgstr ""
 
 msgctxt "#30015"
-msgid "neGcon Twist Deadzone"
+msgid "neGcon Twist Response"
 msgstr ""
 
 msgctxt "#30016"
-msgid "Memory Card 0 Method (Restart Required)"
+msgid "neGcon Twist Deadzone"
 msgstr ""
 
 msgctxt "#30017"
-msgid "Enable Memory Card 1 (Restart Required)"
+msgid "Memory Card 0 Method (Restart Required)"
 msgstr ""
 
 msgctxt "#30018"
-msgid "Shared Memory Cards (Restart Required)"
+msgid "Enable Memory Card 1 (Restart Required)"
 msgstr ""
 
 msgctxt "#30019"
-msgid "Memory Card Left Index"
+msgid "Shared Memory Cards (Restart Required)"
 msgstr ""
 
 msgctxt "#30020"
-msgid "Memory Card Right Index"
+msgid "Memory Card Left Index"
 msgstr ""
 
 msgctxt "#30021"
-msgid "PGXP Operation Mode"
+msgid "Memory Card Right Index"
 msgstr ""
 
 msgctxt "#30022"
-msgid "PGXP 2D Geometry Tolerance"
+msgid "PGXP Operation Mode"
 msgstr ""
 
 msgctxt "#30023"
-msgid "PGXP Primitive Culling"
+msgid "PGXP 2D Geometry Tolerance"
 msgstr ""
 
 msgctxt "#30024"
-msgid "Line-to-Quad Hack"
+msgid "PGXP Primitive Culling"
 msgstr ""
 
 msgctxt "#30025"
-msgid "Widescreen Mode Hack"
+msgid "Line-to-Quad Hack"
 msgstr ""
 
 msgctxt "#30026"
-msgid "Widescreen Mode Hack Aspect Ratio"
+msgid "Widescreen Mode Hack"
 msgstr ""
 
 msgctxt "#30027"
-msgid "CPU Frequency Scaling (Overclock)"
+msgid "Widescreen Mode Hack Aspect Ratio"
 msgstr ""
 
 msgctxt "#30028"
-msgid "GTE Overclock"
+msgid "CPU Frequency Scaling (Overclock)"
 msgstr ""
 
 msgctxt "#30029"
-msgid "Skip BIOS"
+msgid "GTE Overclock"
 msgstr ""
 
 msgctxt "#30030"
-msgid "Override BIOS (Restart Required)"
+msgid "Skip BIOS"
 msgstr ""
 
 msgctxt "#30031"
-msgid "CPU Dynarec"
+msgid "Override BIOS (Restart Required)"
 msgstr ""
 
 msgctxt "#30032"
-msgid "Dynarec Code Invalidation"
+msgid "CPU Dynarec"
 msgstr ""
 
 msgctxt "#30033"
-msgid "Dynarec DMA/GPU/MDEC/Timer Event Cycles"
+msgid "Dynarec Code Invalidation"
 msgstr ""
 
 msgctxt "#30034"
-msgid "Dynarec SPU Samples"
+msgid "Dynarec DMA/GPU/MDEC/Timer Event Cycles"
 msgstr ""
 
 msgctxt "#30035"
-msgid "Core-Reported FPS Timing"
+msgid "Dynarec SPU Samples"
 msgstr ""
 
 msgctxt "#30036"
-msgid "PAL (European) Video Timing Override"
+msgid "Core-Reported FPS Timing"
 msgstr ""
 
 msgctxt "#30037"
-msgid "Crop Overscan"
+msgid "PAL (European) Video Timing Override"
 msgstr ""
 
 msgctxt "#30038"
-msgid "Additional Cropping"
+msgid "Crop Overscan"
 msgstr ""
 
 msgctxt "#30039"
-msgid "Offset Cropped Image"
+msgid "Additional Cropping"
 msgstr ""
 
 msgctxt "#30040"
-msgid "GPU Rasterizer Overclock"
+msgid "Offset Cropped Image"
 msgstr ""
 
 msgctxt "#30041"
-msgid "Core Aspect Ratio"
+msgid "GPU Rasterizer Overclock"
 msgstr ""
 
 msgctxt "#30042"
-msgid "Initial Scan Line - NTSC"
+msgid "Core Aspect Ratio"
 msgstr ""
 
 msgctxt "#30043"
-msgid "Last Scan Line - NTSC"
+msgid "Initial Scan Line - NTSC"
 msgstr ""
 
 msgctxt "#30044"
-msgid "Initial Scan Line - PAL"
+msgid "Last Scan Line - NTSC"
 msgstr ""
 
 msgctxt "#30045"
-msgid "Last Scan Line - PAL"
+msgid "Initial Scan Line - PAL"
 msgstr ""
 
 msgctxt "#30046"
-msgid "CD Access Method (Restart Required)"
+msgid "Last Scan Line - PAL"
 msgstr ""
 
 msgctxt "#30047"
+msgid "CD Access Method (Restart Required)"
+msgstr ""
+
+msgctxt "#30048"
 msgid "CD Loading Speed"
 msgstr ""
