--- a/game.libretro.beetle-psx-hw/resources/language/resource.language.en_gb/strings.po
+++ b/game.libretro.beetle-psx-hw/resources/language/resource.language.en_gb/strings.po
@@ -24,9 +24,7 @@ msgctxt "Addon Description"
 msgid "Beetle PSX is the PlayStation module of Beetle, a port of Madnafen."
 msgstr ""
 
-msgctxt "#30000"
-msgid "Settings"
-msgstr ""
+# Empty string with ID 30000
 
 msgctxt "#30001"
 msgid "Internal GPU Resolution"
@@ -258,4 +256,8 @@ msgstr ""
 
 msgctxt "#30059"
 msgid "DualShock Analog Mode Toggle"
+msgstr ""
+
+msgctxt "#30060"
+msgid "Display OSD Messages"
 msgstr ""
